--- a/src/main/webapp/Css/editRegistrationInformation_style.css
+++ b/src/main/webapp/Css/editRegistrationInformation_style.css
@@ -10,7 +10,7 @@ html,body{
     /*color: white;*/
 }
 #container{
-    height: 100%;
+    height: 800px;
     width: 75%;
     margin: 0px auto 0px auto;
     background-color: white;
