--- a/src/main/webapp/Css/myCompetition_style.css
+++ b/src/main/webapp/Css/myCompetition_style.css
@@ -3,20 +3,20 @@
     padding: 0px;
     margin: 0px;
 }
-html,body{
+body{
     height: 900px;
     width: 100%;
     background-color: black;
     /*color: white;*/
 }
 #container{
-    height: 100%;
+    height: 890px;
     width: 75%;
-    margin: 0px auto;
+    margin: 0px auto 0px auto;
     background-color: white;
     /*opacity: 0.8;*/
     border-radius: 10px;
-    /*box-shadow: 0px 1px 2px black;*/
+    box-shadow: 0px 1px 2px black;
 }
 #logo{
     width: 100%;
@@ -52,77 +52,77 @@ a{
     cursor: pointer;
 }
 /*#content div{*/
-    /*float: left;*/
-    /*!*width: 700px;*!*/
-    /*height: 100px;*/
-    /*background-color: #46b8da;*/
-    /*margin: 10px auto 10px 10px;*/
+/*float: left;*/
+/*!*width: 700px;*!*/
+/*height: 100px;*/
+/*background-color: #46b8da;*/
+/*margin: 10px auto 10px 10px;*/
 /*}*/
 /*#navigationdiv {*/
-    /*!*border-top: 1px solid black;*!*/
-    /*position: relative;*/
-    /*float: left;*/
-    /*width: 18%;*/
-    /*!*background-color: #fbffff;*!*/
+/*!*border-top: 1px solid black;*!*/
+/*position: relative;*/
+/*float: left;*/
+/*width: 18%;*/
+/*!*background-color: #fbffff;*!*/
 /*}*/
 /*#headPortrait{*/
-    /*height: 60px;*/
-    /*width: 60px;*/
-    /*border-radius: 30px;*/
-    /*margin: 25px auto 5px auto;*/
+/*height: 60px;*/
+/*width: 60px;*/
+/*border-radius: 30px;*/
+/*margin: 25px auto 5px auto;*/
 /*}*/
 /*#navigation_bar{*/
-    /*list-style: none;*/
+/*list-style: none;*/
 /*}*/
 /*ul li{*/
-    /*display: block;*/
-    /*float: left;*/
-    /*height: 50px;*/
-    /*width: 100%;*/
-    /*line-height: 52px;*/
+/*display: block;*/
+/*float: left;*/
+/*height: 50px;*/
+/*width: 100%;*/
+/*line-height: 52px;*/
 /*}*/
 /*#competitionList_a,#edit_a{*/
-    /*display: block;*/
-    /*width: 100%;*/
-    /*height: 50px;*/
-    /*text-align: center;*/
-    /*font-weight:bold;*/
-    /*color: #1b6d85;*/
-    /*!*box-shadow: 1px 1px 1px gainsboro inset;*!*/
-    /*!*background-color: red;*!*/
-    /*!*margin: 10px auto 5px auto;*!*/
+/*display: block;*/
+/*width: 100%;*/
+/*height: 50px;*/
+/*text-align: center;*/
+/*font-weight:bold;*/
+/*color: #1b6d85;*/
+/*!*box-shadow: 1px 1px 1px gainsboro inset;*!*/
+/*!*background-color: red;*!*/
+/*!*margin: 10px auto 5px auto;*!*/
 
-    /*font-size: 20px;*/
+/*font-size: 20px;*/
 /*}*/
 /*a:link{                    !*初始状态*!*/
-    /*text-decoration: none;*/
-    /*color: #1b6d85;*/
+/*text-decoration: none;*/
+/*color: #1b6d85;*/
 /*}*/
 /*a:visited{                     !*已访问状态*!*/
-    /*background-color: white;*/
+/*background-color: white;*/
 /*}*/
 /*a:hover{                !*鼠标在上面的状态*!*/
-    /*background-color: white;*/
-    /*!*border: 1px solid #c7ddef;*!*/
-    /*border-radius: 2px;*/
+/*background-color: white;*/
+/*!*border: 1px solid #c7ddef;*!*/
+/*border-radius: 2px;*/
 /*}*/
 /*a:active{                      !*正在点击的状态*!*/
-    /*!*text-decoration: inherit;*!*/
-    /*background-color: white;*/
-    /*!*border: 1px solid #c7ddef;*!*/
-    /*!*border-radius: 10px;*!*/
-    /*color: #1b8f85;*/
+/*!*text-decoration: inherit;*!*/
+/*background-color: white;*/
+/*!*border: 1px solid #c7ddef;*!*/
+/*!*border-radius: 10px;*!*/
+/*color: #1b8f85;*/
 /*}*/
 /*#competitionList_a{*/
-     /*background-color: white;*/
-     /*box-shadow: 1px -1px 2px gainsboro inset;*/
- /*}*/
+/*background-color: white;*/
+/*box-shadow: 1px -1px 2px gainsboro inset;*/
+/*}*/
 /*#detail{*/
-    /*background-color: white;*/
-    /*float: left;*/
-    /*height: 100%;*/
-    /*width: 82%;*/
-    /*border-bottom-right-radius: 10px;*/
+/*background-color: white;*/
+/*float: left;*/
+/*height: 100%;*/
+/*width: 82%;*/
+/*border-bottom-right-radius: 10px;*/
 /*}*/
 
 #large-header{
